ui/apps/io.ox/mail/compose/style.less
/**
 * This work is provided under the terms of the CREATIVE COMMONS PUBLIC
 * LICENSE. This work is protected by copyright and/or other applicable
 * law. Any use of the work other than as authorized under this license
 * or copyright law is prohibited.
 *
 * http://creativecommons.org/licenses/by-nc-sa/2.5/
 *
 * © 2016 OX Software GmbH, Germany. info@open-xchange.com
 *
 * @author David Bauer <david.bauer@open-xchange.com>
 */

 @border-color: #ddd;

 .io-ox-mail-compose-window {

    .inline-yell {
        display: inline-block;
        float: right;
        color: #437d00;
        font-weight: 500;
        margin: 0 8px;
        padding-top: 6px;
    }

    // toggle tinymce toolbar
    &.html-editor {
        @tiny-toolbar-height: 40px + 1px;
        &.no-toolbar .mce-top-part { display: none; }
        &:not(.no-toolbar) .window-body {  bottom: 64px + @tiny-toolbar-height; }
    }

    .window-footer .container {
        display: flex;

        .composetoolbar {
            display: flex;
            flex: 1;
            height: 32px;
            padding-left: 32px;
            margin-left: 0;

        }
        // elements
        .composetoolbar > li {
            margin: 0 6px;
            padding: 0;
            border: 1px transparent solid;

            // baseline icons
            i.fa-font      { font-size: 20px; }
            i.fa-paperclip { font-size: 21px; }
            i.fa-cloud     { font-size: 22px; }
            i.fa-bars      { font-size: 16px; }

            // style icons
            & > a,
            a.dropdown-toggle {
                & > i.fa {
                    width: 1.4em;
                    text-align: center;
                    line-height: 32px;
                    color:black;
                }

                &:focus {
                    outline: thin dotted;
                    outline: 5px auto -webkit-focus-ring-color;
                    outline-offset: -2px;
                }
            }
        }

        // toggle button
        .composetoolbar > li.toggle {
            padding: 0 1px;
            border-radius: 3px;
        }

        .composetoolbar li {
            &.checked { background-color: #e6e6e6; }
            &.disabled {
                i.fa { color: #aaaaaa; }
                cursor: not-allowed;
            }
        }
    }
}
/* ... */

